--- a/scss/components/comments/_comments.scss
+++ b/scss/components/comments/_comments.scss
@@ -6,7 +6,7 @@
     width: auto;
     min-height: 550px;
     background: {
-      image: url("/img/img/comments/figure.png");
+      image: url("./img/img/comments/figure.png");
       position: 55%;
       repeat: no-repeat;
       size: contain;
