--- a/scss/components/description/_description.scss
+++ b/scss/components/description/_description.scss
@@ -59,7 +59,7 @@
         $bottom: 16px,
         $width: 139px,
         $height: 210px,
-        $background: url("/img/img/description/boy-reading.png"),
+        $background: url("./img/img/description/boy-reading.png"),
       );
     }
   }
