--- a/scss/components/education/_education.scss
+++ b/scss/components/education/_education.scss
@@ -34,7 +34,7 @@
         $bottom: 16px,
         $width: 139px,
         $height: 210px,
-        $background: url("/img/img/education/girl-reading.png"),
+        $background: url("./img/img/education/girl-reading.png"),
       );
     }
   }
