--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -123,7 +123,7 @@
       .nav__link-enter {
         display: inline-block;
         background: {
-          image: url("/img/img/header/persona.png");
+          image: url("./img/img/header/persona.png");
           position: center;
           repeat: no-repeat;
         }
