--- a/scss/common/_mixins.scss
+++ b/scss/common/_mixins.scss
@@ -53,7 +53,7 @@
     .privilege__block-text::before {
       @extend %extend-translateY_minus50;
       @include content(
-        $content: url("/img/img/privilege/part_circle-top.png"),
+        $content: url("./img/img/privilege/part_circle-top.png"),
         $left: 20px,
         $top: 50%,
         $width: 28px,
@@ -64,7 +64,7 @@
     .privilege__block-text::before {
       @extend %extend-translateY_minus50;
       @include content(
-        $content: url("/img/img/privilege/part_circle-middle.png"),
+        $content: url("./img/img/privilege/part_circle-middle.png"),
         $left: 20px,
         $top: 50%,
         $width: 33px,
@@ -75,7 +75,7 @@
     .privilege__block-text::before {
       @extend %extend-translateY_minus50;
       @include content(
-        $content: url("/img/img/privilege/part_circle-bottom.png"),
+        $content: url("./img/img/privilege/part_circle-bottom.png"),
         $left: 20px,
         $top: 50%,
         $width: 42px,
@@ -130,7 +130,7 @@
         $bottom: 0px,
         $width: 131px,
         $height: 199px,
-        $background: url("/img/img/price/girl-left.png")
+        $background: url("./img/img/price/girl-left.png")
       );
     }
   } @else if($type == "middle") {
@@ -141,7 +141,7 @@
         $bottom: 0px,
         $width: 125px,
         $height: 271px,
-        $background: url("/img/img/price/girl-middle.png")
+        $background: url("./img/img/price/girl-middle.png")
       );
     }
   } @else if($type == "right") {
@@ -152,7 +152,7 @@
         $bottom: 0px,
         $width: 125px,
         $height: 349px,
-        $background: url("/img/img/price/girl-right.png")
+        $background: url("./img/img/price/girl-right.png")
       );
     }
   }
@@ -207,7 +207,7 @@
     &::after {
       @extend %extend-translateY_plus50;
       @include content(
-        $content: url("/img/img/connection/number.png"),
+        $content: url("./img/img/connection/number.png"),
         $left: 15px,
         $bottom: 50%,
         $width: 24px,
@@ -218,7 +218,7 @@
     &::after {
       @extend %extend-translateY_plus50;
       @include content(
-        $content: url("/img/img/connection/person.png"),
+        $content: url("./img/img/connection/person.png"),
         $left: 15px,
         $bottom: 50%,
         $width: 24px,
@@ -229,7 +229,7 @@
     &::after {
       @extend %extend-translateY_plus50;
       @include content(
-        $content: url("/img/img/connection/phone.png"),
+        $content: url("./img/img/connection/phone.png"),
         $left: 15px,
         $bottom: 50%,
         $width: 24px,
