--- a/scss/components/connection/_connection.scss
+++ b/scss/components/connection/_connection.scss
@@ -14,7 +14,7 @@
     max-width: 460px;
     width: 100%;
     background: {
-      image: url("/img/img/connection/subjects_left.png");
+      image: url("./img/img/connection/subjects_left.png");
       position: left top;
       repeat: no-repeat;
       size: contain;
