--- a/scss/components/comparison/_comparison.scss
+++ b/scss/components/comparison/_comparison.scss
@@ -30,7 +30,7 @@
         $top: 50%,
         $width: 295px,
         $height: 321px,
-        $background: url("/img/img/comparison/boy_left.png"),
+        $background: url("../img/img/comparison/boy_left.png"),
       );
     }
 
@@ -41,7 +41,7 @@
         $bottom: 50%,
         $width: 295px,
         $height: 321px,
-        $background: url("/img/img/comparison/boy_right.png"),
+        $background: url("../img/img/comparison/boy_right.png"),
       );
     }
   }
